--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "eslint.enable": true,
     "path-intellisense.mappings": {
-        "components":"${workspaceRoot}/src/components",
-        "src":"${workspaceRoot}/src"
-    }
+        "components": "${workspaceRoot}/src/components",
+        "src": "${workspaceRoot}/src",
+        "store": "${workspaceRoot}/src/store"
+    },
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "vue"
+    ]
 }
