--- a/package.json
+++ b/package.json
@@ -1,106 +1,106 @@
 {
-    "name": "vismooc-front-end",
-    "version": "0.1.0",
-    "description": "The front end of Vismooc",
-    "dependencies": {
-        "vue": "^2.3.3",
-        "wordcloud": "^1.0.6"
-    },
-    "devDependencies": {
-        "autoprefixer": "^7.1.1",
-        "babel-core": "^6.24.1",
-        "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.0.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "babel-register": "^6.24.1",
-        "cal-heatmap": "^3.6.2",
-        "chai": "^4.0.0",
-        "chromedriver": "^2.29.0",
-        "compression-webpack-plugin": "^0.4.0",
-        "connect-history-api-fallback": "^1.3.0",
-        "cross-spawn": "^5.1.0",
-        "css-loader": "^0.28.3",
-        "d3": "3.5.12",
-        "datamaps": "^0.5.8",
-        "eslint": "^3.19.0",
-        "eslint-config-airbnb-base": "^11.2.0",
-        "eslint-friendly-formatter": "^3.0.0",
-        "eslint-import-resolver-webpack": "^0.8.1",
-        "eslint-loader": "^1.7.1",
-        "eslint-plugin-html": "^2.0.3",
-        "eslint-plugin-import": "^2.3.0",
-        "eventsource-polyfill": "^0.9.6",
-        "express": "^4.15.3",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.11.1",
-        "font-awesome": "^4.7.0",
-        "friendly-errors-webpack-plugin": "^1.6.1",
-        "function-bind": "^1.1.0",
-        "html-webpack-plugin": "^2.28.0",
-        "http-proxy-middleware": "^0.17.4",
-        "inject-loader": "^3.0.0",
-        "isparta-loader": "^2.0.0",
-        "jquery": "^3.2.1",
-        "json-loader": "^0.5.4",
-        "karma": "^1.7.0",
-        "karma-coverage": "^1.1.1",
-        "karma-mocha": "^1.3.0",
-        "karma-phantomjs-launcher": "^1.0.4",
-        "karma-sinon-chai": "^1.3.1",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "0.0.31",
-        "karma-webpack": "^2.0.3",
-        "lolex": "^1.6.0",
-        "material-design-icons": "^3.0.1",
-        "mocha": "^3.4.2",
-        "nightwatch": "^0.9.15",
-        "node-sass": "^4.5.3",
-        "nvd3": "=1.8.5",
-        "opn": "^5.0.0",
-        "ora": "^1.2.0",
-        "phantomjs-prebuilt": "^2.1.14",
-        "resolve-url-loader": "^2.0.2",
-        "sass-loader": "^6.0.5",
-        "selenium-server": "3.4.0",
-        "shelljs": "^0.7.7",
-        "sinon": "^2.3.2",
-        "sinon-chai": "^2.10.0",
-        "style-loader": "^0.18.1",
-        "topojson": "^3.0.0",
-        "url-loader": "^0.5.8",
-        "vue-loader": "^12.2.0",
-        "vue-resource": "^1.3.3",
-        "vue-style-loader": "^3.0.1",
-        "vue-tagsinput": "^2.0.1",
-        "vue-template-compiler": "^2.3.3",
-        "video.js": "^5.19.2",
-        "videojs-youtube": "^2.4.0",
-        "vuex": "^2.3.1",
-        "webpack": "^2.6.1",
-        "webpack-bundle-analyzer": "^2.8.2",
-        "webpack-dev-middleware": "^1.10.2",
-        "webpack-hot-middleware": "^2.18.0",
-        "webpack-merge": "^4.1.0",
-        "autosize": "^3.0.21",
-        "deep-assign": "^2.0.0",
-        "fuzzysearch": "^1.0.3",
-        "lodash.debounce": "^4.0.8",
-        "tether-drop": "^1.4.2",
-        "tether-tooltip": "^1.2.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/HKUST-VISLab/vismooc-front-end.git"
-    },
-    "author": "zhutian",
-    "scripts": {
-        "dev": "node tools/dev-server.js",
-        "build": "node tools/build.js",
-        "unit": "karma start tests/unit/karma.conf.js --single-run",
-        "e2e": "node tests/e2e/runner.js",
-        "test": "npm run unit",
-        "lint": "eslint --ext .js,.vue src tests/unit/specs tests/e2e/specs"
-    }
+  "name": "vismooc-front-end",
+  "version": "0.3.3",
+  "description": "The front end of Vismooc",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HKUST-VISLab/vismooc-front-end.git"
+  },
+  "author": "zhutian",
+  "scripts": {
+    "dev": "node tools/dev-server.js",
+    "build": "node tools/build.js",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "bump": "standard-version",
+    "release": "git push --follow-tags origin dev"
+  },
+  "dependencies": {
+    "autosize": "^4.0.0",
+    "cal-heatmap": "^3.6.2",
+    "d3": "3.5.12",
+    "datamaps": "^0.5.8",
+    "deep-assign": "^2.0.0",
+    "fuzzysearch": "^1.0.3",
+    "lodash.debounce": "^4.0.8",
+    "material-design-icons": "^3.0.1",
+    "moment": "^2.19.1",
+    "node-sass": "^4.7.2",
+    "nvd3": "=1.8.5",
+    "sass-loader": "^6.0.6",
+    "standard-version": "^4.2.0",
+    "tether-drop": "^1.4.2",
+    "tether-tooltip": "^1.2.0",
+    "topojson": "^3.0.0",
+    "video.js": "^6.2.0",
+    "videojs-youtube": "^2.4.0",
+    "vue": "^2.4.1",
+    "vue-good-table": "^1.15.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "chai": "^4.1.0",
+    "chromedriver": "^2.30.1",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
+    "cross-spawn": "^5.1.0",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.29.0",
+    "http-proxy-middleware": "^0.17.4",
+    "inject-loader": "^3.0.1",
+    "karma": "^1.7.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.4",
+    "lolex": "^2.0.0",
+    "mocha": "^3.4.2",
+    "nightwatch": "^0.9.16",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.14",
+    "selenium-server": "3.4.0",
+    "shelljs": "^0.7.8",
+    "sinon": "^2.3.8",
+    "sinon-chai": "^2.11.0",
+    "url-loader": "^0.5.9",
+    "vue-loader": "^12.2.2",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.1",
+    "webpack": "^3.2.0",
+    "webpack-bundle-analyzer": "^2.8.3",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
+  }
 }
